2011-06-22  Jeff Johnston  <jjohnstn@redhat.com>

	Resolves: #349881
	* plugin.xml: Add call-on-empty-delta behaviour for Autotools builder.

2011-06-16  Jeff Johnston  <jjohnstn@redhat.com>

	Resolves: #348432
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/VersionComparator.java: New file.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsPropertyConstants.java: Add new
	constants for various Autoconf versions.

2011-05-26  Jeff Johnston  <jjohnstn@redhat.com>

	Resolves #343879
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java (runScript): 
	For Windows/Mac targets, do not pass PWD environment variable forward.

2011-05-19  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/ErrorParserManager.java (outputLine): Fix
	to use IErrorMarkeredOutputStream interface rather than reflection.

2011-04-27  Jeff Johnston  <jjohnstn@redhat.com>

	Resolves #343875
	* src/org/eclipse/linuxtools/cdt/autotools/core/AutotoolsNewProjectNature.java (.run): Add
	code to turn on and off workspace autobuilding around our call to change the project
	description.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsConfigurationBuilder.java (build): Add
	check for creating a CDT project in which case do not build yet.
	(isCdtProjectCreated): New method.
	(shouldBuild): Do not return true for autobuild, instead let the builder tell us.
	* plugin.xml: Make the Autotools builder configurable.

2011-04-26  Jeff Johnston  <jjohnstn@redhat.com>

	Resolves #343731
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java (runScript): 
	Add support for running scripts on Windows and Mac.
	(regenerateMakefiles): Invoke autoreconf as a script instead of a command.

2010-12-08  Jeff Johnston  <jjohnstn@redhat.com>

	Resolves #331735